Cambios en los tipos de datos de los modelos, error de la vista Prestamo => fecha resuelto, restricciones en el Prestamo=>Create y Edit

--- a/CalculosPrestamos/Views/Prestamos/Delete.cshtml
+++ b/CalculosPrestamos/Views/Prestamos/Delete.cshtml
@@ -20,6 +20,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Usuario.Nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Usuario.Nombre)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.MontoPrestamo)
         </dt>
 
@@ -65,22 +73,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.PagosAdicionales)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UsuarioNombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UsuarioNombre)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DetallesPrestamos)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DetallesPrestamos)
         </dd>
 
     </dl>
