--- a/CalculosPrestamos/Views/Prestamos/Edit.cshtml
+++ b/CalculosPrestamos/Views/Prestamos/Edit.cshtml
@@ -36,7 +36,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PrediodoPrestamosAnnos, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PrediodoPrestamosAnnos, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.PrediodoPrestamosAnnos, new { htmlAttributes = new { @class = "form-control", @min = 1 } })
                 @Html.ValidationMessageFor(model => model.PrediodoPrestamosAnnos, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,7 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.NumeroPagosAnno, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.NumeroPagosAnno, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.NumeroPagosAnno, new { htmlAttributes = new { @class = "form-control", @max = 12, @min = 1 } })
                 @Html.ValidationMessageFor(model => model.NumeroPagosAnno, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -66,10 +66,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UsuarioNombre, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UsuarioID, "UsuarioID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UsuarioNombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UsuarioNombre, "", new { @class = "text-danger" })
+                @Html.DropDownList("UsuarioID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.UsuarioID, "", new { @class = "text-danger" })
             </div>
         </div>
 
