--- a/CalculosPrestamos/Views/Prestamos/Create.cshtml
+++ b/CalculosPrestamos/Views/Prestamos/Create.cshtml
@@ -91,6 +91,16 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
