--- a/Calculadora_Prestamos/Views/Prestamos/Index.cshtml
+++ b/Calculadora_Prestamos/Views/Prestamos/Index.cshtml
@@ -61,10 +61,10 @@
                 @Html.DisplayFor(modelItem => item.PagosAdicionales)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Usuario.Contrasena)
+                @Html.DisplayFor(modelItem => item.Usuario.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cliente.Apellido)
+                @Html.DisplayFor(modelItem => item.Cliente.Nombre)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.PrestamoID">Edit</a> |
