--- a/Calculadora_Prestamos/Views/Prestamos/Details.cshtml
+++ b/Calculadora_Prestamos/Views/Prestamos/Details.cshtml
@@ -10,56 +10,133 @@
     <h4>Prestamo</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MontoPrestamo)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MontoPrestamo)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.InteresAnual)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.InteresAnual)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PrediodoPrestamosAnnos)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PrediodoPrestamosAnnos)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NumeroPagosAnno)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NumeroPagosAnno)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FechaInicio)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FechaInicio)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PagosAdicionales)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PagosAdicionales)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Usuario)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Usuario.Contrasena)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Cliente.Apellido)
         </dd>
     </dl>
 </div>
+<table class="table">
+    <tr>
+        <th>
+            No.
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Detalle_Prestamo[0].FechaPago)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Detalle_Prestamo[0].SaldoInicial)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Detalle_Prestamo[0].Cuotas)
+
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Detalle_Prestamo[0].Avances)
+
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Detalle_Prestamo[0].PagoTotal)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Detalle_Prestamo[0].Capital)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Detalle_Prestamo[0].Interes)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Detalle_Prestamo[0].BalanceFinal)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Detalle_Prestamo[0].InteresAcumulado)
+        </th>
+        <th></th>
+    </tr>
+
+    @{int i = 1; }
+    @foreach (var item in Model.Detalle_Prestamo)
+    {
+        <tr>
+            <td>
+                @i
+                @{i++;}
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FechaPago)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SaldoInicial)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cuotas)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Avances)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PagoTotal)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Capital)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Interes)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BalanceFinal)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.InteresAcumulado)
+            </td>
+        </tr>
+    }
+</table>
+
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model.PrestamoID">Edit</a> |
     <a asp-action="Index">Back to List</a>
